# xff

./: .gitignore  .xff  CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.md  zadani.txt
assets/: doxygen-style.css
examples/: corrupt_index.sh  examples.txt  reverse_update_dummy.sh  update_dummy.sh
examples/academic/oncology/: apoptosis.txt  cure.txt  excisional_surgery.txt
examples/academic/quantum/: bernstein_vazirani.txt  computing.txt  hadrodynamics.txt  plasmonics.txt  shor_algorithm.txt
examples/bi-pa2-b222/cv03/: main.cpp
examples/bi-pa2-b222/cv04/: main.cpp
examples/bi-pa2-b222/cv05/: main.cpp
examples/bi-pa2-b222/cv06/: main.cpp
examples/bi-pa2-b222/cv07/: main.cpp
examples/bi-pa2-b222/cv08/: main.cpp
examples/bi-pa2-b222/cv09/: main.cpp
examples/bi-pa2-b222/du01/: main.cpp
examples/bi-pa2-b222/du02/: main.cpp
examples/bi-pa2-b222/du03/: main.cpp
examples/bi-pa2-b222/du04/: main.cpp
examples/bi-pa2-b222/du05/: main.cpp
examples/bi-pa2-b222/du06/: main.cpp
examples/bi-pa2-b222/du07/: main.cpp
examples/data/gov/: employment-indicators-weekly-paid-jobs-6-20-34-days-as-at-26-September-2022-CSV.csv  rental-price-indexes-april-2023.csv  selected-services-september-2022-quarter-csv.csv
examples/data/gov/marriages-civil-unions-and-divorces/: MCUD-dec20-marriages-and-divorces.csv  MCUD-dec20-marriages-civil-union-by-relationship-type.csv  MCUD-dec20-median-age-of-divorce.csv
examples/dummy/: file1.txt  file2.txt  file3.txt  file4.txt
examples/readings/: gemma.txt  guardians_of_lore.txt  solar_snooks.txt
examples/readings/for_youngest/: the_great_hill.txt  the_journey.txt
playground/: .xff  .xff.new  Makefile  a.out  data.csv  data2.json  hello.txt  hello2.txt  main.cpp  new_world.qasm
src/: CPPFile.cpp  CPPFile.h  CSVFile.cpp  CSVFile.h  CompareOpt.h  DataFileCorrupted.h  DoubleTerm.h  File.cpp  File.h  Font.h  Index.cpp  Index.h  IntTerm.h  InvalidQuery.h  InvalidTimestamp.h  KeywordCountQuery.h  Logger.cpp  Logger.h  MainQuery.cpp  MainQuery.h  NameQuery.h  QueryParser.cpp  RegexNameQuery.h  Root.cpp  Root.h  SizeQuery.h  StringTerm.h  TXTFile.cpp  TXTFile.h  Timestamp.cpp  Timestamp.h  TimestampTerm.h  main.cpp
src/error/: FileInaccessible.h  InvalidTimestamp.h
src/file/: CPPFile.cpp  CPPFile.h  CSVFile.cpp  CSVFile.h  File.cpp  File.h  TXTFile.cpp  TXTFile.h
src/filetype/: CPPFile.cpp  CSVFile.cpp  File.h  TXTFile.cpp
src/query/: ANDQuery.cpp  ANDQuery.h  IncludeQuery.h  KeywordCountQuery.h  LastWriteTimeQuery.h  MainQuery.cpp  MainQuery.h  MostFrequentWordsQuery.h  NameQuery.h  ORQuery.cpp  ORQuery.h  Query.cpp  Query.h  QueryParser.cpp  QueryParser.h  ReadabilityQuery.h  RegexNameQuery.h  RowCountQuery.h  SizeQuery.h  WordCountQuery.h
src/term/: DoubleTerm.h  IntTerm.h
